# homeassistant-gatus-integration

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UAT.md
.planning/phases/02-config-flow/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-entity-platforms/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-UAT.md
.planning/phases/04-distribution/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-UAT.md
.planning/quick/260531-g5q-group-binary-sensors/: 260531-g5q-PLAN.md  260531-g5q-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
custom_components/gatus/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/gatus/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_init.py
