[project]
name = "homeassistant-gatus-integration"
version = "0.1.0"
description = "Home Assistant custom integration for Gatus monitoring"
requires-python = ">=3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.316",
    "ruff>=0.15.15",
]
